# evomcp

./: .gitignore  AUDIT.md  README.md  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: 25018d88-6607-4ca8-b4ec-c83e15213958.json
evomcp/: __init__.py  cli.py  project_loader.py  server.py
evomcp/backends/: __init__.py  mutation.py
evomcp/metrics/: __init__.py  gore_captcha.py
evomcp/optim/: __init__.py  evox_runner.py  gepa_runner.py  hybrid_runner.py
evomcp/optim/search_spaces/: __init__.py
evomcp/pipeline/: __init__.py  candidate.py  evaluator.py  metrics.py  program_db.py  registry.py  tracing.py
skills/: SKILL.md
tests/: test_gepa_mutation_reply.py  test_gore_captcha.py  test_mutation_backends.py  test_project_loader.py
